# Lispy

./: .clang-format  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  readme.txt
ext/mpc-0.9.0/examples/: line_reader
src/: ast.c  ast.h  eval.c  eval.h  parsing.c
